# ratatui_example

./: Cargo.toml  README.md
examples/: barchart.rs  block.rs  dynamic_layout.rs  gauge.rs  gauge_manual.rs  hello_world.rs  list.rs  popup.rs  spinner.rs  spinner_multi.rs
examples/custom_widget/: main.rs
examples/custom_widget/tui/: mod.rs
examples/custom_widget/tui/ui/: mod.rs  render.rs
examples/custom_widget/tui/ui/event_handler/: key_event.rs  mod.rs  mouse_event.rs
examples/custom_widget/tui/widgets/button/: mod.rs  structs.rs  widget.rs
examples/demo/: .envrc  Cargo.toml  app.rs  main.rs
examples/demo/.config/: config.json5
examples/demo/src/: cli.rs  config.rs  errors.rs  logging.rs  main.rs  tui.rs
examples/demo/src/components/: fps.rs  home.rs  mod.rs
examples/demo2/: Cargo.toml
examples/demo2/src/: entity.rs  fps_counter.rs  lib.rs  main.rs  tui.rs
examples/json_editor/: app.rs  main.rs
examples/project-demo/: Cargo.toml
examples/project-demo/src/: app.rs  error.rs  main.rs
examples/project-demo/src/app/: menu.rs  tab1.rs  tab2.rs
examples/simple_async/: handler.rs
examples/tabs/: main.rs
examples/tabs/app/: handle.rs  mod.rs  widgets.rs
examples/tabs/app/appstate/: mod.rs  structs.rs
examples/tabs/app/selected_tab/: mod.rs  structs.rs  widgets.rs
src/: app.rs  main.rs
src/app/: mod.rs  render.rs
src/app/state/: appstate.rs  mod.rs
src/app/ui/: mod.rs  render.rs  selected_tab.rs
