[package]
name = "ratatui_example"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"

[dev-dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
rand = "0.8"
strum = "0.26"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7"
