[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3"
clap = { version = "4.4", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6"
config = "0.14"
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
derive_deref = "1"
directories = "5"
futures = "0.3"
human-panic = "2"
json5 = "0.4"
lazy_static = "1.5"
libc = "0.2"
pretty_assertions = "1"
ratatui = { version = "0.28", features = ["serde", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
anyhow = "1"
vergen-gix = { version = "1", features = ["build", "cargo"] }
